--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
             <li><a href="#">Inicio</a></li>
             <li><a href="#">Nosotros</a></li>
             <li><a href="#">Peliculas</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="https://holasoyanyi.github.io/indice.github.io/">Otros Proyectos</a></li>
         </ul>
     </footer>
 
