--- a/index.html
+++ b/index.html
@@ -316,6 +316,7 @@
             <li><a href="#">Nosotros</a></li>
             <li><a href="#">Peliculas</a></li>
             <li><a href="https://holasoyanyi.github.io/indice.github.io/">Otros Proyectos</a></li>
+            <p>me gustan las peliculas</p>
         </ul>
     </footer>
 
