--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <li><a href="#">Nosotros</a></li>
                     <li><a href="#">Peliculas</a></li>
                     <li><a href="#">Contacto</a></li>
+                    <p>vean peliculas gratis !</p>
                 </ul>
             </nav>
             <a href="#" class="btn-1">Login</a>
